platform/foundation/cilium.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
