platform/foundation/traefik-dashboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: traefik-dashboard
spec:
  rules:
    - host: traefik.minilab.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  traefik
                port:
                  number: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  routes:
  - match: Host(`traefik.minilab.sh`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
